DatePicker and AutoComplete controls fixed - can be used as ngControl in forms - enabling validation support.

--- a/src/AJ2MVC.Web/wwwroot/css/styles.css
+++ b/src/AJ2MVC.Web/wwwroot/css/styles.css
@@ -47,6 +47,13 @@ label {
   display: block;
 }
 
+checkbox[aria-checked="true"] > div {
+    background-color: blue;
+}
+checkbox[aria-checked="false"] > div {
+    background-color: red;
+}
+
 input, button {
   display: block;
 }
