Base grid implementation using paramQueryGrid (based on plain jQueryUI). Typings definition for jQueryUI has been enriched with pqGrid interfaces.
BaseGrid is control to represent grid data for specific entity (IDataStructure).
It has replaced EntityListComponent duties.
EntityListComponent becomes obsolete, but still can be used as example for full custom representation of list of entities.
For RestaurantListComponent override is used (customization), so that base grid is hidden and full custom EntityList is used.

--- a/src/AJ2MVC.Web/wwwroot/css/styles.css
+++ b/src/AJ2MVC.Web/wwwroot/css/styles.css
@@ -104,6 +104,9 @@ control-messages div {
     text-align: left;
     padding: 8px;
 }
+a.view_details {
+    cursor: pointer !important;
+}
 .baseTable a {
     cursor: pointer !important;
 }
