--- a/src/AJ2MVC.Web/Views/Shared/_Layout.cshtml
+++ b/src/AJ2MVC.Web/Views/Shared/_Layout.cshtml
@@ -7,9 +7,9 @@
     <title>@ViewData["Title"] - AJ2MVC</title>
     
     <link rel="stylesheet" href="~/css/jquery-ui.min.css">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/styles.css" />
+    <link rel="stylesheet" href="~/css/pqgrid.min.css" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -48,13 +48,14 @@
     </div>
 
     <script src="~/lib/jquery.js"></script>
-    <script src="~/lib/jquery-ui.js"></script>
+    <script src="~/lib/jquery-ui.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="~/lib/es6-shim.js"></script>
     <script src="~/lib/system.js"></script>
     <script src="~/lib/zone.js"></script>
     <script src="~/lib/moment.js"></script>
     <script src="~/lib/reflect.js"></script>
+    <script src="~/lib/pqgrid.min.js"></script>
     <script>
         System.config({
             defaultJSExtensions: true,
