--- a/src/AJ2MVC.Web/Views/Shared/_Layout.cshtml
+++ b/src/AJ2MVC.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,10 @@
     <title>@ViewData["Title"] - AJ2MVC</title>
     
     <link rel="stylesheet" href="~/css/jquery-ui.min.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2016.1.226/styles/kendo.common.min.css" />
+    <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2016.1.226/styles/kendo.rtl.min.css" />
+    <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2016.1.226/styles/kendo.default.min.css" />
+    <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2016.1.226/styles/kendo.mobile.all.min.css" />
     <link rel="stylesheet" href="~/css/styles.css" />
     <link rel="stylesheet" href="~/css/pqgrid.min.css" />
 </head>
@@ -84,6 +87,7 @@
     <script src="~/lib/ng2-bootstrap.js"></script>
     <script src="~/lib/http.js"></script>
     <script src="~/lib/router.js"></script>
+    <script src="http://kendo.cdn.telerik.com/2016.1.226/js/kendo.all.min.js"></script>
     <script src="~/js/app.js"></script>
 
     @RenderSection("scripts", required: false)
