Data definition override example - save, browse fields change... Events embedded more, submit on foodmenu edit form is now just event and subscriber is EntityDataService which sends data to server.

--- a/src/AJ2MVC.Web/scripts/components/foodmenu/foodmenu-detail.html
+++ b/src/AJ2MVC.Web/scripts/components/foodmenu/foodmenu-detail.html
@@ -2,7 +2,7 @@
 <br />
 <p>{{entity.Name}}</p>
 <form [ngFormModel]="entityForm" (ngSubmit)="onSubmit()">
-    <div *ngIf="inProgressChangeID" style="width:100%;height:100%;background-color:transparent;z-index:10000;"></div>
+    <div #busyOverlayPlace></div>
     <div class="form-group">
         <label for="Name">Name</label>
         <input ngControl="Name" type="text" [(ngModel)]="entity.Name">
