--- a/src/AJ2MVC.Web/wwwroot/css/styles.css
+++ b/src/AJ2MVC.Web/wwwroot/css/styles.css
@@ -299,3 +299,30 @@ a.view_details {
   -o-animation: shrinking-cog .3s 1 ease forwards;
   animation: shrinking-cog .3s 1 ease forwards;
 }
+
+form {
+    position: relative;
+}
+
+.inside-div-overlay {
+    position: absolute;
+    width:100%;
+    height:100%;
+    background-color:burlywood;
+    opacity:0.3;
+    z-index:10000;
+}
+
+.inside-div-overlay .working-icon {
+  opacity:0.9;
+  -webkit-animation: spinning-cog 1.3s infinite ease;
+  -moz-animation: spinning-cog 1.3s infinite ease;
+  -ms-animation: spinning-cog 1.3s infinite ease;
+  -o-animation: spinning-cog 1.3s infinite ease;
+  animation: spinning-cog 1.3s infinite ease;
+  z-index: 10005;
+  position: absolute;
+  width: 30%;
+  top:35%;
+  left:35%;
+}
